[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Icons/0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Icons/174.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Icons/7.png" type="Texture" id=3]
[ext_resource path="res://Scences/HighScore.gd" type="Script" id=4]
[ext_resource path="res://fonts/Odin Rounded - Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 1
outline_color = Color( 0.258824, 0.184314, 0.0196078, 1 )
font_data = ExtResource( 5 )

[node name="HighScore" type="Node2D"]
script = ExtResource( 4 )

[node name="Back_Btn_icon" type="Sprite" parent="."]
position = Vector2( 57.7925, 36.5888 )
scale = Vector2( 0.320961, 0.21373 )
texture = ExtResource( 2 )

[node name="back_Btn" type="Button" parent="Back_Btn_icon"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -89.2369
margin_top = -96.7273
margin_right = 88.7631
margin_bottom = 100.273
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_box" type="Sprite" parent="."]
position = Vector2( 240, 445 )
scale = Vector2( 0.514581, 1.02564 )
texture = ExtResource( 3 )

[node name="score_1" type="Sprite" parent="background_box"]
position = Vector2( 49.5549, -160.631 )
scale = Vector2( 1.45181, 0.480585 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="background_box/score_1"]
margin_left = -171.26
margin_top = -55.0
margin_right = 227.74
margin_bottom = 60.0
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "100000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="background_box/score_1"]
margin_left = -276.412
margin_top = -55.0
margin_right = 122.588
margin_bottom = 60.0
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "1."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_2" type="Sprite" parent="background_box"]
position = Vector2( 49.5549, -82.6313 )
scale = Vector2( 1.45181, 0.480585 )
texture = ExtResource( 1 )

[node name="Label2" type="Label" parent="background_box/score_2"]
margin_left = -170.666
margin_top = -55.2842
margin_right = 228.334
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "100000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="background_box/score_2"]
margin_left = -276.412
margin_top = -55.2842
margin_right = 122.588
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "2."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_3" type="Sprite" parent="background_box"]
position = Vector2( 49.5549, -3.65625 )
scale = Vector2( 1.45181, 0.480585 )
texture = ExtResource( 1 )

[node name="Label3" type="Label" parent="background_box/score_3"]
margin_left = -170.666
margin_top = -55.2842
margin_right = 228.334
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "100000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="background_box/score_3"]
margin_left = -276.412
margin_top = -55.2842
margin_right = 122.588
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "3."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_4" type="Sprite" parent="background_box"]
position = Vector2( 49.5549, 78.2438 )
scale = Vector2( 1.45181, 0.480585 )
texture = ExtResource( 1 )

[node name="Label4" type="Label" parent="background_box/score_4"]
margin_left = -170.666
margin_top = -55.2843
margin_right = 228.334
margin_bottom = 59.7157
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "100000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="background_box/score_4"]
margin_left = -276.412
margin_top = -55.2843
margin_right = 122.588
margin_bottom = 59.7157
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "4."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_5" type="Sprite" parent="background_box"]
position = Vector2( 49.5549, 160.144 )
scale = Vector2( 1.45181, 0.480585 )
texture = ExtResource( 1 )

[node name="Label5" type="Label" parent="background_box/score_5"]
margin_left = -170.666
margin_top = -55.2842
margin_right = 228.334
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "100000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="background_box/score_5"]
margin_left = -276.412
margin_top = -55.2842
margin_right = 122.588
margin_bottom = 59.7158
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "5."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Back_Btn_icon/back_Btn" to="." method="_on_back_Btn_button_up"]
